objects/tffa__Offer__c.object
<CustomObject>
    <description>An offer is a clear proposal to sell a specific product or service under specific conditions. Offers are made in a manner that a reasonable person would understand its acceptance and will result in a binding contract (source: investopedia). Offers can include special rates and fee waivers over the original product rates and fees, depending on the credit profile of the person. It is important to note that offers represent a configuration in the system like products, and are not tied to a person directly. They are attached to recommendations (via items) which are tied to a person. Offers can also exist without a product. This just means that the fulfilment of the offer can only be done by an external system.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the offer is active for consumption. Derived from disabled and effective period (StartDate &amp; EndDate) of the offer.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__StartDate__c &lt;= TODAY() &amp;&amp; tffa__EndDate__c &gt;= TODAY()</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AnnualFee__c</fullName>
        <description>(Reduced) Fee charged yearly for use of credit card.</description>
        <label>Annual fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__AutoPayDiscount__c</fullName>
        <description>Discount offered on price when a  person enrols in AutoPay when applying under the offer.</description>
        <label>Auto pay discount</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>The unique code of the offer. Is also an external id for the offer.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Short description about the offer, highlighting the main features.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures explicit disabling of offer independent of any configured effective range.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EndDate__c</fullName>
        <defaultValue>DATE(2049,1,1)</defaultValue>
        <description>The date on which the offer expires. Captures the upper bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FooterDescription__c</fullName>
        <description>Additional description often serving as disclaimer and usually displayed in the footer of offer card.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Footer description</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__FullDescription__c</fullName>
        <description>A comprehensive description about the offer, covering features, rates, discounts in greater detail.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Full description</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__IconClass__c</fullName>
        <description>Style classes for rendering an icon describing (the nature of) the offer.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ImageUrl__c</fullName>
        <description>Location (url) of image describing the offer.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MaxAmount__c</fullName>
        <description>Maximum loan amount for which the offer is applicable. For credit card or heloc this can refer to max credit line offered.</description>
        <label>Max amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MaxLoanToValueRatio__c</fullName>
        <description>Specifies the upper bound on the loan-to-value ratio applicable for the term. The loan-to-value (LTV) ratio is a financial ratio that compares the size of a loan to the value of an asset that is purchased using the proceeds of the loan.  For HELOC, this stores the upper
        bound on the combined loan-to-value ratio applicable for the product offered.</description>
        <label>Max loan to value ratio</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__MinAmount__c</fullName>
        <description>Minimum loan amount for which the offer is applicable.</description>
        <label>Min amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MinLoanToValueRatio__c</fullName>
        <description>Specifies the lower bound on the loan-to-value ratio applicable for the term. The loan-to-value (LTV) ratio is a financial ratio that compares the size of a loan to the value of an asset that is purchased using the proceeds of the loan.  For HELOC, this stores the lower
        bound on the combined loan-to-value ratio applicable for the product offered.</description>
        <label>Min loan to value ratio</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__OriginationFee__c</fullName>
        <description>(Reduced) Fee charged for processing the loan application under the offer.</description>
        <label>Origination fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__PrepaymentFee__c</fullName>
        <description>(Reduced) Fee charged if a person pays off all or part of their loan/mortgage early.</description>
        <label>Prepayment fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ProductCategory__c</fullName>
        <description>The category of the product being offered. Same as product category of related product.</description>
        <label>Product category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The product being offered.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product must be active and should of same category as product category.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Category__c</field>
                <operation>equals</operation>
                <valueField>$Source.tffa__ProductCategory__c</valueField>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__PromotionDescription__c</fullName>
        <description>Description about promotions related to the offer.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Promotion description</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__Purpose__c</fullName>
        <description>Purpose of the offer. e.g. prequalified offer</description>
        <label>Purpose</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OfferPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RelationshipDiscount__c</fullName>
        <description>Discount offered on price to an existing customer or member when applying under the offer.</description>
        <label>Relationship discount</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date from which the offer is active or ready for consumption. Captures the lower bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Purpose__c</columns>
        <columns>tffa__ProductCategory__c</columns>
        <columns>tffa__Product__c</columns>
        <columns>tffa__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>